--- a/src/App.css
+++ b/src/App.css
@@ -37,11 +37,29 @@ a {
   pointer-events: none;
 }
 
+.highlight-container {
+  display: flex;
+  justify-content: space-between;
+  margin-block: 5rem;
+}
+
+.highlight-big {
+  font-size: 6rem;
+  margin-block: 0;
+  text-align: center;
+}
+
+.highlight-small {
+  text-align: center;
+  font-size: 2rem;
+}
+
 nav {
   display: flex;
-  /* gap: 1rem; */
+  gap: 1rem;
   justify-content: space-around;
-  padding: 1.5rem;
+  align-items: center;
+  padding: 1.5rem 0.5rem 0.5rem;
   margin-bottom: 1rem;
 }
 
@@ -58,7 +76,7 @@ nav a::after {
   left: 0;
   width: 0;
   height: 2px;
-  border-radius: 9999px;
+  border-radius: var(--infinite);
   background-color: hsl(0 0 15%);
   transition: width 0.25s ease-in-out;
 }
@@ -71,15 +89,49 @@ nav a:not(.selected-nav-tab):hover::after {
   font-weight: bold;
 }
 
+form {
+  display: flex;
+  width: 50%;
+}
+
 input {
-  border-radius: 999px;
+  border-radius: var(--infinite) 0 0 var(--infinite);
+  width: 70%;
+  font-size: 1.25rem;
+  padding-inline: 1.25rem;
+}
+
+input:not(:focus-visible) {
+  border-right: none;
+}
+
+form button {
+  border-radius: 0 var(--infinite) var(--infinite) 0;
+  display: grid;
+  place-items: center;
 }
 
 button {
   cursor: pointer;
   padding: 0.7rem 1.2rem;
-  border-radius: 999px;
+  border-radius: var(--infinite);
   transition: 0.15s ease-in-out;
+}
+
+.dark-btn {
+  border: 2px solid hsl(0 0 5%);
+  background-color: hsl(0 0 5%);
+  color: hsl(0 0 95%);
+}
+
+.dark-btn:hover {
+  background-color: hsl(0 0 100%);
+  color: hsl(0 0 5%);
+  /* box-shadow: inset 0 0 0 2px hsl(0 0 25%); */
+}
+
+.dark-btn:disabled {
+  background-color: hsl(0 0 25%);
 }
 
 .wipe-btn {
