--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 :root {
   --shadow: inset 0 1px 2px #ffffff50, 0 -1px #00000010, 0 1px 2px #00000030, 0 4px 8px #00000015;
   --hover-shadow: inset 0 1px 2px #ffffff50, 0 -1px #00000010, 0 1px 3px #00000037, 0 4px 12px #00000020;
+  --infinite: 999px
 }
 
 * {
