--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,23 @@
   text-align: center;
 }
 
+.home .welcome {
+  font-size: 3rem;
+}
+
+.home-section {
+  /* min-height: 40rem; */
+  padding-block: 5rem;
+}
+
+.home .dummy {
+  display: grid;
+  place-items: center;
+  font-size: 2rem;
+  color: gray;
+  border: 1px solid hsl(0 0 92%);
+}
+
 .tile-grid {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -11,7 +28,10 @@
 }
 
 .tile {
-  height: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  height: 28rem;
   text-align: center;
   padding: 1.25rem;
   border-radius: 1rem;
@@ -48,6 +68,12 @@
   color: hsl(0, 100%, 60%);
 }
 
+.product-stock {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: hsl(0, 100%, 60%);
+}
+
 a {
   text-decoration: none;
   color: black;
@@ -78,6 +104,7 @@ a {
 nav {
   display: flex;
   position: sticky;
+  z-index: 1;
   top: 0;
   gap: 1rem;
   justify-content: space-around;
@@ -166,6 +193,11 @@ form button {
   user-select: none;
 }
 
+.logo-icon {
+  height: 2.25rem;
+  width: 2.25rem;
+}
+
 footer {
   display: flex;
   justify-content: center;
@@ -244,6 +276,12 @@ button {
   margin-top: 4rem;
 }
 
+.category-showcase h1 {
+  font-size: 2rem;
+  font-weight: bold;
+  margin-block: 1.75rem;
+}
+
 .product-showcase-box {
   display: flex;
   justify-content: center;
@@ -293,16 +331,23 @@ button {
   display: flex;
   gap: 2rem;
   align-items: flex-start;
-  padding-bottom: 5rem;
 }
 
 .shop-aside {
+  min-width: 16%;
+  align-self: stretch;
+  display: flex;
+  flex-direction: column;
   padding: 1rem;
+  border-right: 1px solid hsl(0 0 90%);
+  /* box-shadow: 0 4px 8px #00000020; */
 }
 
 .aside-heading {
+  font-size: 1.25rem;
+  font-weight: bold;
   margin: 0;
-  padding-left: 1.5rem;
+  padding: 1rem 0 1rem 1.5rem;
   /* text-align: center; */
 }
 
@@ -335,7 +380,9 @@ ul {
 
 .shop-main-heading {
   text-align: center;
-  margin-bottom: 2rem;
+  font-size: 2rem;
+  font-weight: bold;
+  margin-block: 2rem;
 }
 
 .shop-main .tile {
@@ -343,14 +390,23 @@ ul {
 }
 
 .product {
-  display: flex;
-  gap: 4rem;
-  align-items: center;
   margin-top: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 2rem;
+  padding: 1rem;
+  padding-right: 2rem;
+}
+
+.product .product-title {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-block: 1rem;
 }
 
 .carousel {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
@@ -373,25 +429,117 @@ ul {
   object-fit: contain;
 }
 
+.dashboard-main {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.discount {
+  color: hsl(0, 100%, 60%);
+}
+
+.current-price {
+  font-size: 3rem;
+  font-weight: bold;
+}
+
 .buy-buttons {
+  margin-top: 1rem;
   display: grid;
   gap: 1rem;
-  grid-template-columns: 1fr / 1fr;
-  grid-auto-flow: column;
+  grid-auto-flow: row;
+  padding-inline: 10rem;
+}
+
+.buy-buttons button {
+  padding-block: 0.85rem;
 }
 
 .product button:disabled {
 	color: hsl(0 0 95%);
 }
 
-.product .product-info {
-  padding-right: 2rem;
+.product .info h2, .product .review-section h2 {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-block: 1rem;
 }
 
-.product th {
-  text-align: left;
+.product .info table {
+  margin-top: 1rem;
 }
 
 table {
-  width: 100%;
+  width: fit-content;
+}
+
+tr {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+td {
+  padding: 1rem;
+  vertical-align: middle;
+}
+
+.info-icon {
+  display: grid;
+  place-items: center;
+  background-color: #00000020;
+  border-radius: 50%;
+  width: 3rem;
+  height: 3rem;
+}
+
+.info-icon svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.info-heading {
+  color: #00000070;
+  font-weight: bold;
+  font-size: 0.9rem;
+  margin-bottom: 0.3rem;
+}
+
+.star-rating {
+  color: transparent;
+  background-clip: text;
+  font-size: 1.3rem;
+}
+
+.info {
+  padding: 1rem;
+}
+
+.reviews {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.review {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+  box-shadow: var(--shadow);
+  padding: 1.5rem;
+  border-radius: 0.5rem;
+}
+
+.review:hover {
+  box-shadow: var(--hover-shadow);
+}
+
+.review-title {
+  display: flex;
+  justify-content: space-between;
+}
+
+.review-title * {
+  margin: 0;
 }
