--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   place-items: center;
   font-size: 2rem;
   color: gray;
-  border: 1px solid hsl(0 0 92%);
+  border: var(--faint-border);
 }
 
 .tile-grid {
@@ -27,12 +27,15 @@
   margin-inline: auto;
 }
 
-.tile-grid .empty-msg {
-  grid-column: 1/-1;
+.empty-msg {
   text-align: center;
   max-width: 100%;
-  color: hsl(0 0 60%);
+  color: var(--empty-msg-color);
   font-weight: 400;
+}
+
+.tile-grid .empty-msg {
+  grid-column: 1/-1;
 }
 
 .tile {
@@ -40,11 +43,13 @@
   flex-direction: column;
   gap: 0.5rem;
   height: 28rem;
+  width: 17rem;
   text-align: center;
   align-items: center;
   padding: 1.25rem;
   border-radius: 1rem;
   box-shadow: var(--shadow);
+  background: var(--tile-bg);
   transition: box-shadow 0.2s ease-in-out, background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 }
 
@@ -58,7 +63,7 @@
 }
 
 .tile:active {
-  box-shadow: inset 1px 1px 3px gray;
+  box-shadow: var(--active-inset-shadow);
 }
 
 .tile .tile-title {
@@ -68,24 +73,24 @@
 }
 
 .tile .tile-striked-price {
-  color: hsl(0 0 40%);
+  color: var(--striked-price-color);
 }
 
 .tile .tile-stock-msg {
   font-size: 0.9rem;
   font-weight: 500;
-  color: hsl(0, 100%, 60%);
+  color: var(--tile-stock-msg-color);
 }
 
 .product-stock {
   font-size: 1.2rem;
   font-weight: 500;
-  color: hsl(0, 100%, 60%);
+  color: var(--product-stock-msg-color);
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: var(--color);
 }
 
 .disable {
@@ -116,11 +121,14 @@ nav {
   z-index: 1;
   top: 0;
   gap: 1rem;
-  justify-content: space-around;
   align-items: center;
   padding: 0.5rem;
-  background-color: white;
-  box-shadow: 0 4px 8px #00000015;
+  background: var(--nav-bg);
+  box-shadow: var(--nav-shadow);
+}
+
+nav > * {
+  margin-inline: 0.5rem;
 }
 
 nav a {
@@ -137,7 +145,7 @@ nav a::after {
   width: 0;
   height: 2px;
   border-radius: var(--infinite);
-  background-color: hsl(0 0 15%);
+  background-color: var(--nav-underline-color);
   transition: width 0.25s ease-in-out;
 }
 
@@ -145,66 +153,93 @@ nav a:not(.selected-nav-tab):hover::after {
   width: 100%;
 }
 
-.selected-nav-tab {
+nav .selected-nav-tab {
   font-weight: bold;
 }
 
-.cart-link {
+nav .cart-link {
   display: flex;
   gap: 0.75rem;
   align-items: center;
 }
 
-.cart-link .cart-size {
+nav .cart-link .cart-count {
   line-height: 0;
   height: 2rem;
   width: 2rem;
   border-radius: 50%;
-  background-color: hsl(0, 0%, 5%);
-  color: hsl(0 0 95%);
+  background-color: var(--cart-count-bg-color);
+  color: var(--cart-count-color);
   display: grid;
   place-items: center;
 }
 
-form {
+nav form {
   display: flex;
-  width: 50%;
+  width: 40%;
+  margin-inline: auto;
 }
 
-input {
+nav input {
+  border: var(--nav-input-border);
   border-radius: var(--infinite) 0 0 var(--infinite);
-  width: 70%;
+  flex-grow: 1;
   font-size: 1.25rem;
   padding-inline: 1.25rem;
+  background-color: inherit;
+  color: inherit;
 }
 
-input:not(:focus-visible) {
+nav input:not(:focus-visible) {
   border-right: none;
 }
 
-input:focus {
+nav input:focus {
   outline: none;
-  border: 3px solid hsl(0 0 5%);
+  border: var(--nav-input-focus-border);
   border-right: none;
 }
 
-form button {
+nav form button {
   border-radius: 0 var(--infinite) var(--infinite) 0;
   display: grid;
   place-items: center;
 }
 
-.logo {
+nav form button:hover {
+  background-color: var(--nav-form-btn-bg) !important;
+}
+
+nav .logo {
   display: flex;
   align-items: center;
   font-family: "Pacifico", cursive;
   font-size: 2rem;
   user-select: none;
+  margin: 0 2rem 0 1rem;
 }
 
-.logo-icon {
+nav .logo-icon {
   height: 2.25rem;
   width: 2.25rem;
+  filter: var(--nav-logo-icon-filter);
+}
+
+nav .theme-toggle {
+  border: none;
+  background-color: transparent;
+  color: #000000;
+  height: 1.6rem;
+  width: 1.6rem;
+  display: grid;
+  place-items: center;
+  margin: 0 1.5rem 0 1rem;
+  padding: 0;
+}
+
+nav .theme-toggle img {
+  height: 97%;
+  width: 97%;
 }
 
 footer {
@@ -214,7 +249,7 @@ footer {
   margin-top: auto;
   padding-bottom: 1rem;
   padding-top: 1rem;
-  box-shadow: 0 -1px #00000025;
+  box-shadow: var(--footer-shadow);
 }
 
 footer a {
@@ -233,37 +268,37 @@ button {
   transition: 0.15s ease-in-out;
 }
 
-.light-btn {
-  border: 2px solid hsl(0 0 5%);
-  background-color: hsl(0 0 98%);
-  color: hsl(0 0 5%);
+.unpolar-btn {
+  border: var(--unpolar-btn-border);
+  background-color: var(--unpolar-btn-bg-color);
+  color: var(--unpolar-btn-color);
 }
 
-.light-btn:hover {
-  background-color: hsl(0 0 30%);
-  color: hsl(0 0 100%);
-  border: 2px solid transparent;
+.unpolar-btn:hover {
+  border: var(--unpolar-btn-hover-border);
+  background-color: var(--unpolar-btn-hover-bg-color);
+  color: var(--unpolar-btn-hover-color);
 }
 
-.dark-btn {
-  border: 2px solid hsl(0 0 5%);
-  background-color: hsl(0 0 5%);
-  color: hsl(0 0 95%);
+.polar-btn {
+  border: var(--polar-btn-border);
+  background-color: var(--polar-btn-bg-color);
+  color: var(--polar-btn-color);
 }
 
-.dark-btn:hover {
-  background-color: hsl(0 0 100%);
-  color: hsl(0 0 5%);
+.polar-btn:hover {
+  background-color: var(--polar-btn-hover-bg-color);
+  color: var(--polar-btn-hover-color);
 }
 
-.action-buttons .dark-btn:hover {
-  background-color: hsl(0 0 70%);
-  color: hsl(0 0 5%);
-  border: 2px solid transparent;
+.action-buttons .polar-btn:hover {
+  border: var(--action-polar-btn-hover-border);
+  background-color: var(--action-polar-btn-hover-bg-color);
+  color: var(--action-polar-btn-hover-color);
 }
 
-.dark-btn:disabled {
-  background-color: hsl(0 0 25%);
+.polar-btn:disabled {
+  background-color: var(--polar-btn-disabled-bg-color);
 }
 
 .large-btn {
@@ -271,35 +306,16 @@ button {
   padding: 1.25rem 2.75rem;
 }
 
-.wipe-btn {
-  position: relative;
-  overflow: hidden;
-  background: transparent;
-  transition: color 0.25s ease-in-out;
-}
-
-.wipe-btn::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 0;
-  height: 100%;
-  background-color: hsl(0 0 5%);
-  z-index: -1;
-  transition: width 0.25s ease-in-out;
-}
-
-.wipe-btn:hover::before {
-  width: 100%;
-}
-
-.wipe-btn:hover {
-  color: hsl(0 0 90%);
+.category-showcase:first-of-type {
+  margin-top: 2rem;
 }
 
 .category-showcase:not(:first-of-type) {
   margin-top: 4rem;
+}
+
+.category-showcase:last-of-type {
+  margin-bottom: 3rem;
 }
 
 .category-showcase h1 {
@@ -325,13 +341,13 @@ button {
 }
 
 .category-btn {
-  color: hsl(0, 0%, 30%);
-  padding: 0.5rem;
+  color: var(--category-btn-color);
+  padding-inline: 0.5rem;
   /* border-radius: 1.2rem; */
   padding-block: 60%;
   border: none;
   box-shadow: var(--shadow);
-  background-color: white;
+  background: var(--category-btn-bg);
 }
 
 .category-btn:hover {
@@ -339,7 +355,7 @@ button {
 }
 
 .category-btn:active {
-  box-shadow: inset 1px 1px 3px gray;
+  box-shadow: var(--category-btn-active-shadow);
 }
 
 .center {
@@ -355,7 +371,7 @@ button {
 
 .shop {
   display: flex;
-  gap: 0.5rem;
+  /* gap: 0.5rem; */
   align-items: flex-start;
 }
 
@@ -365,8 +381,7 @@ button {
   display: flex;
   flex-direction: column;
   padding: 1rem;
-  border-right: 1px solid hsl(0 0 90%);
-  /* box-shadow: 0 4px 8px #00000020; */
+  border-right: var(--shop-aside-border-right);
 }
 
 .aside-heading {
@@ -393,10 +408,11 @@ ul {
 
 .category-card:hover {
   box-shadow: var(--shadow);
+  background: var(--category-card-bg);
 }
 
 .category-card:active {
-  box-shadow: inset 1px 1px 3px gray;
+  box-shadow: var(--category-card-active-shadow);
 }
 
 .shop-main {
@@ -462,8 +478,8 @@ ul {
   gap: 1rem;
 }
 
-.discount {
-  color: hsl(0, 100%, 60%);
+.product .discount {
+  color: var(--product-pg-discount-color);
 }
 
 .current-price {
@@ -485,7 +501,7 @@ ul {
 }
 
 .product button:disabled {
-	color: hsl(0 0 95%);
+	color: var(--product-pg-disabled-btn-color);
 }
 
 .product .info h2, .product .review-section h2 {
@@ -526,7 +542,7 @@ ul {
 .info-icon {
   display: grid;
   place-items: center;
-  background-color: #00000020;
+  background-color: var(--info-icon-bg-color);
   border-radius: 50%;
   width: 3rem;
   height: 3rem;
@@ -538,7 +554,7 @@ ul {
 }
 
 .info-heading {
-  color: #00000070;
+  color: var(--info-heading-color);
   font-weight: bold;
   font-size: 0.9rem;
   margin-bottom: 0.3rem;
@@ -590,4 +606,117 @@ ul {
 
 .review-title p {
   font-weight: 300;
+}
+
+.cart-main {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.cart-items {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  padding: 0 2rem;
+}
+
+.cart-item {
+  display: grid;
+  grid-template-columns: 3fr 3fr 3fr 3fr 3fr 1fr;
+  column-gap: 2rem;
+  align-items: center;
+  padding: 1.25rem 2rem;
+  box-shadow: var(--shadow);
+  background: var(--tile-bg);
+  border-radius: 2rem;
+  font-size: 1.125rem;
+}
+
+.cart-item > * {
+  text-align: center;
+}
+
+.cart-item-img-box {
+  height: 100%;
+  overflow: hidden;
+  display: grid;
+  place-items: center;
+  transition: filter 0.15s ease-in-out;
+}
+
+.cart-item-img-box:hover {
+  filter: drop-shadow(0 0 1.75rem var(--drop-shadow-color));
+}
+
+.cart-item img {
+  display: block;
+  width: 100%;
+  max-height: 100%;
+  aspect-ratio: 1;
+}
+
+.cart-item-title {
+  font-weight: 600;
+}
+
+.cart-item-title:hover {
+  opacity: 70%;
+}
+
+.cart-item .count-editor {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.cart-item-count {
+  display: grid;
+  place-items: center;
+  width: 4rem;
+  height: 3rem;
+  padding-inline: 1rem;
+  color: var(--color);
+  background: var(--tile-bg);
+  border: var(--unpolar-btn-border);
+  border-radius: 1.5rem;
+}
+
+.cart-item .count-editor button {
+  height: 2.25rem;
+  width: 2.25rem;
+  display: grid;
+  place-items: center;
+  font-size: 0.9rem;
+  line-height: 0;
+  padding: 0;
+}
+
+.cart-item .count-editor svg {
+  height: 1rem;
+  width: 1rem;
+}
+
+.cart-item .count-editor .decrement-btn:hover {
+  background-color: var(--dark-red);
+}
+
+.dark .cart-item .count-editor .decrement-btn:hover {
+  color: white;
+}
+
+.cart-item .count-editor .delete-svg {
+  height: 1.25rem;
+  width: 1.25rem;
+}
+
+.cart-item .delete-btn {
+  background-color: transparent;
+  border: none;
+  color: var(--color);
+}
+
+.cart-item .delete-btn:hover {
+  color: var(--red);
 }
